styles.css
body {
  margin: 0;
  cursor: none !important;
  font-family: 'DM Sans', sans-serif;
  background: #543F87;
}

.cursor {
  width: 17px;
  height: 17px;
  background-color: white;
  opacity: 70%;
  border: 1px solid white;
  border-radius: 50%;
  position: absolute;
  transition-duration: 200ms;
  transition-timing-function: ease-out;
  z-index: 100;
  pointer-events: none;
}

a {
  cursor: none;
}

p {
  font-size: 18px;
}

h1 {
  font-size: 50px;
  margin: 0;
  padding: 0;
}

hr {
  width: 35%;
  display: block;
  margin: 3% 0;
  border-color: #B66EA2;
  border-width: 0.5px;
  border-style: solid;
}

#sidebar {
  position: fixed;
  height: 150vh;
  width: 18%;
  padding-top: 5%;
  background-color: #EB913A;
  z-index: 98;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.sidebar-toggle #sidebar {
  -webkit-transform: translateX(200px);
  transform: translateX(200px);
}

.sidebar-links-wrapper {
  margin: 50% 20% 20% 20%;
}

.sidebar-link-wrapper {
  margin: 0;
}

.sidebar-link {
  font-size: 1.75vw;
  margin: 30% 0;
}

.about-me-wrapper {
  height: 100vh;
}

.about-me-text-wrapper {
  position: relative;
  margin: 0 auto 10%;
  padding-top: 10%;
  width: 60%;
  z-index: 98;
}

.about-hi-there {
  color: white;
}

.about-text {
  color: white;
}

.experience-wrapper {
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

.experience-text-wrapper {
  position: relative;
  width: 60%;
  left: 0; 
  right: 0;
  margin: 0 auto 10%;
  z-index: 98;
}

.experience-text-wrapper * {
  color: white;
}

.exp-subtext-wrapper {
  display: flex;
  flex-direction: column;
}

.exp-title {
  margin-bottom: 10%;
}

.exp-l1, .exp-l2 {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
  margin-bottom: 1%;
}

.exp-l1 * {
  margin: 0;
  padding: 0;
}

.exp-l2 * {
  margin: 0;
  padding: 0;
  font-style: italic;
}

.exp-company {
  font-size: 32px;
  margin-top: 5%;
}

.exp-location {
  font-size: 18px;
}

.exp-position {
  font-size: 24px;
}

.exp-date {
  font-size: 18px;
}

.exp-bullet-list {
  padding: 0;
  margin: 0 0 0 24px;
}

.exp-bullet {
  margin: 5px 0;
  font-size: 18px;
  padding: 0;
}

.projects-wrapper {
  width: 100%;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

.project-wrapper {
  margin: 10% 0;
}

.projects-text-wrapper {
  position: relative;
  width: 60%;
  left: 0; 
  right: 0;
  margin: 10% auto 10%;
  z-index: 98;
}

.projects-text-wrapper * {
  color: white;
}

.projects-title {
  margin-bottom: 10%;
}

.projects-name {
  font-size: 32px;
  margin-bottom: 0;
}

.proj-view-btn {
  width: 165px;
  height: 35px;
  text-align: center;
  background-color: #B66EA2;
  color: white;
  line-height: 35px;
  position: relative;
}

.proj-link {
  position: absolute; 
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  z-index: 1;
}

.proj-view-btn * {
  margin: auto;
  color: white;
}

.projects-tech {
  font-style: italic;
  font-weight: 300;
  margin-top: 1%;
}

.project-text {
  line-height: 1.5;
}

.debug {
  border: 1px solid;
  border-color: black;
}

@keyframes blur {
  to {
    -webkit-filter: blur(5px);
    -moz-filter:    blur(5px);
    -o-filter:      blur(5px);
    -ms-filter:     blur(5px);
  }
  
}

/* fadeInUp animation */

@keyframes fadeInUp {
  from {
      transform: translate3d(0,40px,0)
  }

  to {
      transform: translate3d(0,0,0);
      opacity: 1
  }
}

@-webkit-keyframes fadeInUp {
  from {
      transform: translate3d(0,40px,0)
  }

  to {
      transform: translate3d(0,0,0);
      opacity: 1
  }
}

.animated {
  animation-duration: 1s;
  animation-fill-mode: both;
  -webkit-animation-duration: 1s;
  -webkit-animation-fill-mode: both
}

.animatedFadeInUp {
  opacity: 0
}

.fadeInUp {
  opacity: 0;
  animation-name: fadeInUp;
  -webkit-animation-name: fadeInUp;
}

/* old fade in animation */

.fade-in-animation {
    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 2s; /* Firefox < 16 */
        -ms-animation: fadein 2s; /* Internet Explorer */
         -o-animation: fadein 2s; /* Opera < 12.1 */
            animation: fadein 2s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

